# rustdesk

./: .gitignore  Cargo.toml  build.py
.agent/docs/: README.md  doc_sync_tracker.md  fork_maintenance_workflow.md  hbb_common_submodule_guide.md  linux_build_features.md  llm_sync_guide.md  merge_conflict_resolution.md  xconnect_architecture.md  xconnect_logo_checklist.md  xconnect_rename_tracker.md
.github/workflows/: flutter-build.yml
examples/: ipc.rs
flatpak/: com.xconnect.XConnect.metainfo.xml  xconnect.json
flutter/: build_fdroid.sh  fix_android_plugins_macos.sh  pubspec.yaml
flutter/ios/: exportOptions.plist
flutter/lib/: common.dart  consts.dart  main.dart  network_monitor.dart
flutter/linux/: CMakeLists.txt  main.cc  my_application.cc
flutter/windows/: CMakeLists.txt
libs/portable/: Cargo.toml  app_metadata.toml  generate.py
libs/portable/src/: bin_reader.rs  main.rs
res/: PKGBUILD  gen_icon.sh  osx-dist.sh  pacman_install  rpm-flutter-suse.spec  rpm-flutter.spec  rpm-suse.spec  rpm.spec  update_all_icons.sh  xconnect-link.desktop  xconnect.desktop  xconnect.service
res/DEBIAN/: postinst  postrm  preinst  prerm
res/msi/: preprocess.py
src/: auth_2fa.rs  clipboard.rs  common.rs  flutter_ffi.rs  main.rs  service.rs  tray.rs
src/platform/: linux.rs  macos.rs
xconnect/docs/: doc_sync_tracker.md  fork_maintenance_workflow.md  fork_sync_procedure.md  linux_build_features.md  post_merge_fixes.md  windows_android_build_features.md  xconnect_architecture.md  xconnect_logo_checklist.md  xconnect_rename_tracker.md
(+63 files in other folders)
